--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,3 +4,10 @@
 <h2>Body:</h2>
 <p><%= @book.body %></p>
 
+<span>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
+</span>
+
+<span>
+    <%= link_to "Back", :back %>
+</span>
