--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,13 +23,32 @@
 </table>
 
 <h2>New book</h2>
-<%= form_with model: @book do |f| %>
+    <% if @book.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+        <ul>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %><li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+<%= form_for (@book) do |f| %>
 
-  <h4>Body</h4>
-  <%= f.text_area :body %>
+  <div class="field">
+    <div class="field_with_errors">
+      <%= f.label :Title %>
+    </div>
+      <%= f.text_field :title %>
+  </div>
+
+  <div class="field">
+    <div class="field_with_errors">
+      <%= f.label :Body %>
+    </div>
+      <%= f.text_area :body %>
+  </div>
 
   <br><%= f.submit 'Create Book' %></br>
  <% end %>
