--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,14 +1,28 @@
 <h1>Editing Book</h1>
+<%= form_with model:@book, local:true do |f| %>
 
-<%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
+   <% if @book.errors.any? %>
+      <div id="error_explanation">
+　　    <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+      </div>
+    <% end %>
 
-<h4>Title</h4>
-<%= f.text_field :title %>
+    <div class="field">
+      <%= f.label :Title %>
+      <%= f.text_field :title %>
+    </div>
 
-<h4>Body</h4>
-<%= f.text_area :body %>
+    <div class="field">
+      <%= f.label :Body %>
+      <%= f.text_area :body %>
+    </div>
 
-<br><%= f.submit 'Update Book' %></br>
+       <%= f.submit 'Update Book' %>  
 
 <% end %>
 
@@ -16,5 +30,5 @@
     <%= link_to "Show", book_path(@book.id) %>
 </span>
 <span>
-    <%= link_to "Back", :back %>
+    <%= link_to "Back", books_path %>
 </span>
