--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -23,32 +23,28 @@
 </table>
 
 <h2>New book</h2>
+  <%= form_with model:@book, local:true do |f| %>
     <% if @book.errors.any? %>
       <div id="error_explanation">
-        <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
-        <ul>
-          <% @book.errors.full_messages.each do |message| %>
-            <li><%= message %><li>
-          <% end %>
-        </ul>
+　　    <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+          <ul>
+            <% @book.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
       </div>
     <% end %>
 
-<%= form_for (@book) do |f| %>
 
-  <div class="field">
-    <div class="field_with_errors">
+    <div class="field">
       <%= f.label :Title %>
-    </div>
       <%= f.text_field :title %>
-  </div>
-
-  <div class="field">
-    <div class="field_with_errors">
-      <%= f.label :Body %>
     </div>
-      <%= f.text_area :body %>
-  </div>
 
-  <br><%= f.submit 'Create Book' %></br>
- <% end %>
+    <div class="field">
+      <%= f.label :Body %>
+      <%= f.text_area :body %>
+    </div>
+
+      <%= f.submit 'Create Book' %>
+  <% end %>
