--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,16 @@
-<h2>Title:</h2>
-<p><%= @book.title %></p>
+<p id="notice">
+  <% flash.each do |key, value| %>
+    <% content_tag(:div, value, class: key) %>
+  <% end %>
+</p>
 
-<h2>Body:</h2>
-<p><%= @book.body %></p>
+<p><strong>Title:</strong>
+  <%= @book.title %>
+</p>
+
+<p><strong>Body:</strong>
+  <%= @book.body %>
+</p>
 
 <span>
     <%= link_to "Edit", edit_book_path(@book.id) %>
