--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,8 +1,6 @@
-<p id="notice">
-  <% flash.each do |key, value| %>
-    <% content_tag(:div, value, class: key) %>
-  <% end %>
-</p>
+<% if flash[:notice] %>
+  <p id="notice"><%= flash[:notice] %></p>
+<% end %>
 
 <p><strong>Title:</strong>
   <%= @book.title %>
