--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@ body {
   background-color: #fff;
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;p
+  font-size: 13px;
   line-height: 18px;
   margin: 33px;
 }
@@ -35,6 +35,10 @@ p, ol, ul, td {
   font-size: 13px;
   line-height: 18px;
   margin: 33px;
+}
+
+a {
+  color: #000;
 }
 
 a:visited {
