--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:notice] %>
+  <p id="notice"><%= flash[:notice] %></p>
+<% end %>
+
 <h1>Books</h1>
 
 <table>
@@ -26,7 +30,7 @@
   <%= form_with model:@book, local:true do |f| %>
     <% if @book.errors.any? %>
       <div id="error_explanation">
-　　    <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+　　    <h2><%= @book.errors.count %> errors prohibited this book from being saved:</h2>
           <ul>
             <% @book.errors.full_messages.each do |message| %>
               <li><%= message %></li>
